# project_demo_python_blank

./: .flake8  .pre-commit-config.yaml  README.md  setup.cfg  setup.py
.github/workflows/: pythonpackage.yml
blank/: __init__.py.py  blank_func.py  main.py
test/: test_blank.py  test_say_hello.py
